--- a/README
+++ b/README
@@ -4,4 +4,5 @@ dumpline
 This repo tracks source code of dumpline. It's a vscode extension, for dumping
 selected line into image.
 
-image/negi.png is licensed under LicenseRef-MDM-2.1.
+image/*.png and image/*.webp are licensed under LicenseRef-MDM-2.1.
+For other files, their license is defined by SPDX header.
